correct scrollbar

--- a/new.css
+++ b/new.css
@@ -389,9 +389,10 @@
     /* border: 2px solid red; */
     border-radius: 11px;
     background-color: #183e89;
+    background-color: red;
     color: white;
-    width: 49%;
-    min-width: 155px;
+    width: 40%;
+    /* max-width: 100px; */
     padding: 7px;
     font-weight: 700;
     /* margin: -6.5% 0px 0px 3%; */
@@ -421,10 +422,10 @@
     background-color: hsl(37, 96%, 48%);
     color: white;
     max-width: 31%;
-    min-width: 77px;
+    /* min-width: 77px; */
     /* height: 100%; */
     padding: 7px 5px;
-    height: 35px;
+    height: 40px;  
     /* margin: -55px 0px 0px 67%; */
     font-family: Arial, Helvetica, sans-serif;
   }
@@ -433,14 +434,32 @@
     background-color: white;
     box-sizing: border-box;
     height: 40px;
-    width: 34%;
+    max-height: 50px;
+    width: 30%;
     display: flex;
     justify-content: space-between;
     padding: 0px 5px;
    z-index: 2;
    position: absolute;
    top:-20px;
-   left:667px;
+   left:70%;
+   right: 0px;
+    
+  }
+  .hap-view2{
+    /* border: 1px solid orange; */
+    background-color: white;
+    box-sizing: border-box;
+    height: 40px;
+    max-height: 50px;
+    width: 36.5%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 5px;
+   z-index: 2;
+   position: absolute;
+   top:-20px;
+   left:63.5%;
    right: 0px;
     
   }
@@ -725,39 +744,39 @@
    
   }
   .top-point3{
-    /* border:7px solid orange; */
+    /* border:2px solid red; */
     background-color: white;
-    width: 300px;
+    width: 31.5%;
     height: 45px;
     display: flex;
     justify-content: space-between;
     position: absolute;
     top: -20px;
-    left: 69.5%;
+    left: 68.3%;
      z-index: 1;
   }
   .top-point2{
-    /* border:7px solid orange; */
+    /* border:2px solid orange; */
     background-color: white;
-    width: 310px;
+    width: 31.3%;
     height: 45px;
     display: flex;
     justify-content: space-between;
     position: absolute;
     top: -20px;
-    left: 35%;
+    left: 34.5%;
      z-index: 1;
   }
   .top-point1{
-    /* border:7px solid orange; */
+    /* border:2px solid orange; */
     background-color: white;
-    width: 303px;
+    width: 31%;
     height: 45px;
     display: flex;
     justify-content: space-between;
     position: absolute;
     top: -20px;
-    left: 1.5%;
+    left: 0.5%;
      z-index: 1;
   }
   .about-class{
